@@ -4,6 +4,8 @@ CHANGE LOG
 
 Changes up to 0.98
 
+   * performance increase for atom selections
+
    * updated output generated by PyMOL when loading various files...
 
    * rank as the final arbiter of atom sorts (if everything else matches)
